--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+   		    <groupId>io.takari</groupId>
+    		<artifactId>maven-wrapper</artifactId>
+    		<version>0.5.6</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -50,6 +57,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.21</version>
             <scope>runtime</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
 		</dependency>
 		
 		<!-- Driver JDBC (Banco de Dados Derby) -->
