--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
 	
         <groupId>com.danielheringer</groupId>
-        <artifactId>trabalho</artifactId>
+        <artifactId>trabalho2</artifactId>
         <version>1</version>
         <packaging>war</packaging>
         <name>trabalho</name>
